--- a/css/style.css
+++ b/css/style.css
@@ -158,12 +158,17 @@ header {
     font-size: 3rem;
     font-weight: 400;
 }
+.contentS1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 .contentS1 h2{
     margin-bottom: 3rem;
     
 }
 .contentS1  a{
-    color: #EEA200;
+    color: #fff;
     text-decoration: none;
 }
 .section1 {
@@ -270,13 +275,13 @@ border: 1px solid rgba(0, 0, 0, 0.08);
     width: 100%;
     justify-content: center;
 }
-.card{
+.cardHome{
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 2rem;
 }
-.card > img {
+.cardHome > img {
     width: 150px;
 }
 
@@ -733,4 +738,32 @@ button:focus{
 }
 .progress{
     margin-bottom: 1rem;
+}
+.cardsWeb{
+    width: 100%;
+    height: auto;
+}
+.contentCardsWeb{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+.card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.card-img-top {
+    width: 150px !important;
+    height: auto;
+}
+.contentImgCard {
+    width: 299px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
