--- a/scss/style.css
+++ b/scss/style.css
@@ -83,14 +83,15 @@ header {
 
   #nav {
     position: fixed;
-    background: rgba(66, 66, 67, 0.6);
+    background: rgba(0, 0, 0, 0.825);
     width: 100%;
     height: 100vh;
     top: 0;
     left: -100%;
     padding: 40px;
     z-index: 1;
-    transition: all 400ms; }
+    transition: all 400ms;
+    backdrop-filter: blur(20px); }
     #nav ul {
       display: flex;
       flex-direction: column;
