--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,9 @@
 $colorDominante:#ffc107;
+$colorSecundario:#EEA200;
 $lista : $colorDominante, black, #fff;
 $default: nth($lista, 1);
+$widthDef: 100%;
+$center : center;
 .contentS1{
     h1{
         text-decoration: underline 3px $default;
@@ -11,12 +14,12 @@ $default: nth($lista, 1);
 }
 .logo-2{
     img{
-        width: 100%;
+        width: $widthDef;
     }
 }
 .logo-3{
     img{
-        width: 100%;
+        width: $widthDef;
     }
 }
 @mixin generalStyles{
@@ -26,12 +29,17 @@ $default: nth($lista, 1);
     font-family: 'montserrat';
     scroll-behavior: smooth;
 }
+@mixin displayCenter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 *{
     @include generalStyles();
 }
 $stylesColor:(
-    color:#ffc107,
-    center:center,
+    color:$colorDominante,
+    center:$center,
     size:17px,
     rem1:1rem
 );
@@ -41,7 +49,7 @@ $stylesColor:(
 
 .section1 {
     display: flex;
-    width: 100%;
+    width: $widthDef;
     padding: 5rem;
     height: auto;
 }
@@ -49,9 +57,7 @@ $stylesColor:(
    @extend .section1
 }
 header{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include displayCenter();
     position:sticky;
     top: 0;
     z-index: 99;
@@ -68,9 +74,7 @@ header{
     }
 }
 #nav{
-   display: flex;
-   justify-content: center;
-   align-items: center;
+    @include displayCenter();
    height: 70px;
    ul li{
         list-style: none;
@@ -88,10 +92,10 @@ header{
     }
 }
 #nav ul li .active{
-    text-decoration: underline #EEA200 5px;
+    text-decoration: underline $colorSecundario 5px;
 }
 #nav ul li a:hover{
-    background-color: #EEA200;
+    background-color: $colorSecundario;
      color: #fff;
     padding: 24px 5px;
     display: sticky;
@@ -109,24 +113,25 @@ header{
         display: none;
     }
     header{
-        width: 100%;
+        width: $widthDef;
         justify-content: flex-end;
     }
     #nav{
         position: fixed;
-        background: rgba(66, 66, 67, 0.6);
-        width: 100%;
+        background: rgba(0, 0, 0, 0.825);
+        width: $widthDef;
         height: 100vh;
         top: 0;
         left: -100%;
         padding: 40px;
         z-index: 1;
         transition: all 400ms;
+        backdrop-filter: blur(20px);
         ul {
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            justify-content: $center;
+            align-items: $center;
         }
         ul li a {
             color: #fff;
@@ -169,17 +174,17 @@ header {
 
 .section1{
     display: flex;
-    width: 100%;
+    width: $widthDef;
     padding: 5rem;
     height: auto;
 }
 .slide{
     display: flex;
     width: 50%;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
     img{
-        max-width: 100%;
+        max-width: $widthDef;
     }
 }
 
@@ -194,13 +199,13 @@ header {
 .titleS1{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
     width: 50%;
     h1{
         font-size: 5rem;
         font-weight: 500;
-        text-decoration: underline 3px #EEA200;
+        text-decoration: underline 3px $colorSecundario;
     }
     h2 {
         font-size: 3rem;
@@ -250,17 +255,17 @@ header {
 
 /* Section 2 */
 .section2{
-    width: 100%;
+    width: $widthDef;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: $center;
     padding: 5rem;
     height: auto;
 }
 .contentS2{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: $center;
 }
 .contentS2 h1{
     font-size: 4.5rem;
@@ -268,8 +273,8 @@ header {
 }
 .contentImgS2{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
     padding-top: 5rem;
     flex-wrap: wrap;
 }
@@ -286,12 +291,12 @@ header {
 /* Section 3 */
 .section3{
     padding: 5rem;
-    width: 100%;
+    width: $widthDef;
     height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
 }
 .section3 h1{
     font-size: 4rem;
@@ -307,22 +312,22 @@ border: 1px solid rgba(0, 0, 0, 0.08);
 /* Section 4 */
 .section4{
     display: flex;
-    justify-content: center;
+    justify-content: $center;
     padding: 5rem ;
-    width: 100%;
+    width: $widthDef;
     height: auto;
     background: rgba(66, 66, 67, 0.088);
 }
 .contentBrands{
     display: grid;
     grid-template-columns: repeat(auto-fit, 200px);
-    width: 100%;
-    justify-content: center;
+    width: $widthDef;
+    justify-content: $center;
 }
 .cardHome{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
     padding: 2rem;
     img {
         width: 150px;
@@ -334,8 +339,8 @@ border: 1px solid rgba(0, 0, 0, 0.08);
 .sectionPresent{
     display: flex;
     padding: 5rem;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
     height: 100vh;
 }
 .img{
@@ -382,24 +387,24 @@ border: 1px solid rgba(0, 0, 0, 0.08);
  .about{
     display: flex;
     padding: 5rem;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
 }
 .contentAbout{
     display: flex; 
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
 }
 .cardAbout{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
 }
 .contentImgAbout{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
     img{
         width: 400px;
     }
@@ -408,27 +413,27 @@ border: 1px solid rgba(0, 0, 0, 0.08);
 .contentTextAbout{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
     width: 30%;
     h1{
         font-size: 3rem;
         margin-bottom: 2rem;
-        border-bottom: 2px solid #EEA200;
+        border-bottom: 2px solid $colorSecundario;
     }
 }
 
 .contentRank h1{
-    border-bottom: 2px solid #EEA200;
+    border-bottom: 2px solid $colorSecundario;
     margin-bottom: 1rem;
 }
 /* Services */
 .services{
-    width: 100%;
+    width: $widthDef;
     padding: 5rem;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
 }
 .contentServices{
     display: flex;
@@ -444,24 +449,24 @@ display: flex;
 
 .contentTextImg{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
     flex-direction: column;
     h1{
         font-size: 3rem;
         font-weight: 500;
-        border-bottom: 2px solid #EEA200;
+        border-bottom: 2px solid $colorSecundario;
     }
     p{
         margin-top: 2rem;
-        text-align: center;
+        text-align: $center;
         width: 40%;
     }
 }
 
 /* Brands */
 .brands{
-    width: 100%;
+    width: $widthDef;
     padding: 5rem;
     height: auto;
 }
@@ -469,24 +474,24 @@ display: flex;
     display: grid;
     grid-template-columns: repeat(auto-fit, 200px);
    
-    align-items: center;
-    justify-items: center;
-    justify-content: center;
+    align-items: $center;
+    justify-items: $center;
+    justify-content: $center;
     gap: 10rem;
 }
 .cardBrand{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
 }
 
 .contentImgBrand{
     width: 300px;
     height: 200px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
     img{
         width: 300px;
         height: auto;
@@ -496,18 +501,18 @@ display: flex;
 /* Contact */
 .contentForm{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
 }
 .contentForm2{
-    border: 1px solid #EEA200;
+    border: 1px solid $colorSecundario;
     display: flex;
     border-radius: 10px;
 }
 .contentImgForm {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
     img{
         width: 300px;
     }
@@ -521,14 +526,14 @@ form{
     gap: 3rem;
 }
 label{
-    color: #EEA200;
+    color: $colorSecundario;
 }
 input{
     border-color: #00000011;
     height: 30px;
 }
 .button{
-    border: 1px solid #EEA200;
+    border: 1px solid $colorSecundario;
     border-radius: 10px;
     background-color: transparent;
     width: 100px;
@@ -536,16 +541,16 @@ input{
     transition: all 300ms ease;
 }
 .button:hover{
-    background-color: #EEA200;
+    background-color: $colorSecundario;
     color: #fff;
 }
 /* footer */
 .containerFooter{
-    width: 100%;
+    width: $widthDef;
     padding: 5rem 5rem 0rem;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: $center;
+    justify-content: $center;
     ul li{
         list-style: none;
         display: block;
@@ -565,7 +570,7 @@ input{
     height: auto;
 }
 .containerFooter ul li a:hover{
-    background-color: #EEA200;
+    background-color: $colorSecundario;
     color: #fff;
     padding: 10px 5px;
     display: sticky;
@@ -597,7 +602,7 @@ input{
     height: 250px;
     p{
         display: flex;
-        align-items: center;
+        align-items: $center;
     }
     p img{
         margin-right:1rem;
@@ -608,8 +613,8 @@ input{
     width: 100%;
     height: 40px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: $center;
+    align-items: $center;
     p{
         color: rgba(0, 0, 0, 0.428);
     }
@@ -623,27 +628,27 @@ input{
         margin-bottom: 5rem;
     }
     .slide{
-        width: 100%;
+        width: $widthDef;
     }
     .titleS1{
-        width: 100%;
+        width: $widthDef;
     }
     .contentS1{
         margin-bottom: 3rem;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        justify-content: $center;
+        align-items: $center;
         h1{
-            text-align: center;
+            text-align: $center;
             margin-bottom: 1rem;
         }
         h2{
-            text-align: center;
+            text-align: $center;
         }
         a  {
             display: flex;
-            justify-content: center;
+            justify-content: $center;
         }
     }
     .contentImgS2{
@@ -652,13 +657,13 @@ input{
     .contentImgS2 .img{
         width: 70%;
         display: flex;
-        justify-content: center;
+        justify-content: $center;
     }
     .slogan{
         width: 100%;
         margin-bottom: 3rem;
         h1{
-            text-align: center;
+            text-align: $center;
         }
     }
     .containerFooter{
@@ -667,7 +672,7 @@ input{
             display: grid;
             grid-template-columns: repeat(auto-fit, 150px);
             width: 100%;
-            justify-content: center;
+            justify-content: $center;
             margin-bottom: 3rem;
         }
     }
@@ -678,14 +683,14 @@ input{
         margin-bottom: 2rem;
     }
     .contentMap h1{
-        text-align: center;
+        text-align: $center;
     }
     .contentNumbers{
         height: auto;
         margin-bottom:2rem ;
     }
     .contentContact h1{
-        text-align: center;
+        text-align: $center;
     }
     /* about */
     .about{
@@ -700,7 +705,7 @@ input{
     .contentTextAbout{
         width: 80%;
         p{
-            text-align: center;
+            text-align: $center;
         }
     }
     /* services */
@@ -709,8 +714,8 @@ input{
     }
     .cardServices{
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        justify-content: $center;
+        align-items: $center;
     }
     .contentTextImg p{
         width: 80%;
@@ -728,11 +733,11 @@ input{
     .img{
         width: 100%;
         display: flex;
-        justify-content: center;
+        justify-content: $center;
     }
     .text{
         display: flex;
-        justify-content: center;
+        justify-content: $center;
         width: 100%;
     }
     .contentForm{
@@ -774,7 +779,7 @@ input{
         font-size: 2rem;
     }
     .section3 h1{
-        text-align: center;
+        text-align: $center;
         font-size: 2.5rem;
     }
     .text h1{
@@ -797,16 +802,12 @@ button:focus{
     height: auto;
 }
 .contentCardsWeb{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   @include displayCenter();
     flex-wrap: wrap;
     gap: 1rem;
 }
 .card{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   @include displayCenter();
     
 }
 .card-img-top {
@@ -816,12 +817,8 @@ button:focus{
 .contentImgCard {
     width: 299px;
     height: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   @include displayCenter();
 }
 .contentModalServices{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include displayCenter();
 }
